--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@
   color: #61dafb;
 }
 
+.mainTitleHome {
+  font-size: 150px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
